bison/calc/parser.output
Grammar

    0 $accept: stmts $end

    1 stmts: ε
    2      | stmt T_SEMICOLON stmts
    3      | error T_SEMICOLON stmts

    4 stmt: assign
    5     | expr

    6 assign: T_VAR_IDENT T_ASSIGN expr

    7 expr: expr T_PLUS term
    8     | expr T_MINUS term
    9     | term

   10 term: term T_MUL factor
   11     | term T_DIV factor
   12     | factor

   13 factor: T_VAR_IDENT
   14       | T_INT_LITERAL
   15       | T_MINUS factor
   16       | T_LEFT_PAR expr T_RIGHT_PAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3
    T_INT_LITERAL <integer_literal> (258) 14
    T_VAR_IDENT <var_identifier> (259) 6 13
    T_ASSIGN (260) 6
    T_LEFT_PAR (261) 16
    T_RIGHT_PAR (262) 16
    T_SEMICOLON (263) 2 3
    T_PLUS (264) 7
    T_MUL (265) 10
    T_MINUS (266) 8 15
    T_DIV (267) 11


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    stmts <integer_literal> (14)
        on left: 1 2 3
        on right: 0 2 3
    stmt <integer_literal> (15)
        on left: 4 5
        on right: 2
    assign <integer_literal> (16)
        on left: 6
        on right: 4
    expr <integer_literal> (17)
        on left: 7 8 9
        on right: 5 6 7 8 16
    term <integer_literal> (18)
        on left: 10 11 12
        on right: 7 8 9 10 11
    factor <integer_literal> (19)
        on left: 13 14 15 16
        on right: 10 11 12 15


State 0

    0 $accept: • stmts $end

    error          shift, and go to state 1
    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 3
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    $end  reduce using rule 1 (stmts)

    stmts   go to state 6
    stmt    go to state 7
    assign  go to state 8
    expr    go to state 9
    term    go to state 10
    factor  go to state 11


State 1

    3 stmts: error • T_SEMICOLON stmts

    T_SEMICOLON  shift, and go to state 12


State 2

   14 factor: T_INT_LITERAL •

    $default  reduce using rule 14 (factor)


State 3

    6 assign: T_VAR_IDENT • T_ASSIGN expr
   13 factor: T_VAR_IDENT •

    T_ASSIGN  shift, and go to state 13

    $default  reduce using rule 13 (factor)


State 4

   16 factor: T_LEFT_PAR • expr T_RIGHT_PAR

    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 14
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    expr    go to state 15
    term    go to state 10
    factor  go to state 11


State 5

   15 factor: T_MINUS • factor

    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 14
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    factor  go to state 16


State 6

    0 $accept: stmts • $end

    $end  shift, and go to state 17


State 7

    2 stmts: stmt • T_SEMICOLON stmts

    T_SEMICOLON  shift, and go to state 18


State 8

    4 stmt: assign •

    $default  reduce using rule 4 (stmt)


State 9

    5 stmt: expr •
    7 expr: expr • T_PLUS term
    8     | expr • T_MINUS term

    T_PLUS   shift, and go to state 19
    T_MINUS  shift, and go to state 20

    $default  reduce using rule 5 (stmt)


State 10

    9 expr: term •
   10 term: term • T_MUL factor
   11     | term • T_DIV factor

    T_MUL  shift, and go to state 21
    T_DIV  shift, and go to state 22

    $default  reduce using rule 9 (expr)


State 11

   12 term: factor •

    $default  reduce using rule 12 (term)


State 12

    3 stmts: error T_SEMICOLON • stmts

    error          shift, and go to state 1
    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 3
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    $end  reduce using rule 1 (stmts)

    stmts   go to state 23
    stmt    go to state 7
    assign  go to state 8
    expr    go to state 9
    term    go to state 10
    factor  go to state 11


State 13

    6 assign: T_VAR_IDENT T_ASSIGN • expr

    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 14
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    expr    go to state 24
    term    go to state 10
    factor  go to state 11


State 14

   13 factor: T_VAR_IDENT •

    $default  reduce using rule 13 (factor)


State 15

    7 expr: expr • T_PLUS term
    8     | expr • T_MINUS term
   16 factor: T_LEFT_PAR expr • T_RIGHT_PAR

    T_RIGHT_PAR  shift, and go to state 25
    T_PLUS       shift, and go to state 19
    T_MINUS      shift, and go to state 20


State 16

   15 factor: T_MINUS factor •

    $default  reduce using rule 15 (factor)


State 17

    0 $accept: stmts $end •

    $default  accept


State 18

    2 stmts: stmt T_SEMICOLON • stmts

    error          shift, and go to state 1
    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 3
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    $end  reduce using rule 1 (stmts)

    stmts   go to state 26
    stmt    go to state 7
    assign  go to state 8
    expr    go to state 9
    term    go to state 10
    factor  go to state 11


State 19

    7 expr: expr T_PLUS • term

    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 14
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    term    go to state 27
    factor  go to state 11


State 20

    8 expr: expr T_MINUS • term

    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 14
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    term    go to state 28
    factor  go to state 11


State 21

   10 term: term T_MUL • factor

    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 14
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    factor  go to state 29


State 22

   11 term: term T_DIV • factor

    T_INT_LITERAL  shift, and go to state 2
    T_VAR_IDENT    shift, and go to state 14
    T_LEFT_PAR     shift, and go to state 4
    T_MINUS        shift, and go to state 5

    factor  go to state 30


State 23

    3 stmts: error T_SEMICOLON stmts •

    $default  reduce using rule 3 (stmts)


State 24

    6 assign: T_VAR_IDENT T_ASSIGN expr •
    7 expr: expr • T_PLUS term
    8     | expr • T_MINUS term

    T_PLUS   shift, and go to state 19
    T_MINUS  shift, and go to state 20

    $default  reduce using rule 6 (assign)


State 25

   16 factor: T_LEFT_PAR expr T_RIGHT_PAR •

    $default  reduce using rule 16 (factor)


State 26

    2 stmts: stmt T_SEMICOLON stmts •

    $default  reduce using rule 2 (stmts)


State 27

    7 expr: expr T_PLUS term •
   10 term: term • T_MUL factor
   11     | term • T_DIV factor

    T_MUL  shift, and go to state 21
    T_DIV  shift, and go to state 22

    $default  reduce using rule 7 (expr)


State 28

    8 expr: expr T_MINUS term •
   10 term: term • T_MUL factor
   11     | term • T_DIV factor

    T_MUL  shift, and go to state 21
    T_DIV  shift, and go to state 22

    $default  reduce using rule 8 (expr)


State 29

   10 term: term T_MUL factor •

    $default  reduce using rule 10 (term)


State 30

   11 term: term T_DIV factor •

    $default  reduce using rule 11 (term)
